[tool.poetry]
name = "oka"
version = "0.211126.0"
description = "Python client for oka repository"
authors = ["Rafael Bizao <rabizao@gmail.com>"]
license = "GPL3"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
python-dotenv = "^0.19.2"
idict = "^1.211126.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.11b1"
pylint = "^2.12.1"
ipython = "^7.29.0"
pytest-cov = "^3.0.0"
testfixtures = "^6.18.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
