[tool.poetry]
name = "oka"
version = "0.211126.4"
description = "Python client for oka repository"
authors = ["Rafael Bizao <rabizao@gmail.com>", "Davi Pereira-Santos <dpsabc@gmail.com>"]
license = "GPL3"
readme = 'README.md'

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
python-dotenv = "^0.19.2"
idict = "^1.211127.3"
pandas = "^1.3.4"
sklearn = "^0.0"
SQLAlchemy = {version = "^1.4.27", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.11b1"
pylint = "^2.12.1"
ipython = "^7.29.0"
pytest-cov = "^3.0.0"
testfixtures = "^6.18.3"
autoreadme = "^0.2102.20"
sklearn = "^0.0"
SQLAlchemy = "^1.4.27"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

#[[tool.poetry.source]]
#name = "dvpypi"
#url = "http://localhost:8080/simple"
#secondary = true
