[tool.poetry]
name = "oka"
version = "0.211129.1"
description = "Python client for oka repository"
authors = ["Rafael Bizao <rabizao@gmail.com>", "Davi Pereira-Santos <dpsabc@gmail.com>"]
license = "GPL3"
readme = 'README.md'

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
python-dotenv = "^0.19.2"
idict = "^1.211129.0"
arff2pandas = {version = "1.0.1", optional = true}
pandas = { version = "1.3.4", optional = true }
SQLAlchemy = { version = "^1.4.27", optional = true }
scikit-learn = {version = "1.0.1", optional = true}

[tool.poetry.dev-dependencies]
autoreadme = "^0.2102.20"
pytest = "^6.2.5"
black = "^21.7b0"
pypiserver = "^1.4.2"
passlib = "^1.7.4"
pylint = "^2.7.4"
ipython = "^7.26.0"
pandas = "1.3.4"
pytest-cov = "^3.0.0"
testfixtures = "^6.18.3"
arff2pandas = "1.0.1"
scikit-learn = "1.0.1"
SQLAlchemy = "^1.4.27"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

#[[tool.poetry.source]]
#name = "dvpypi"
#url = "http://localhost:8080/simple"
#secondary = true
